New questions + refactoring